WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105996
[BlackBerry] file:/// pages don't get correct scales after several rotations and history navigations
https://bugs.webkit.org/show_bug.cgi?id=105996
Summary
[BlackBerry] file:/// pages don't get correct scales after several rotations ...
Jacky Jiang
Reported
2013-01-02 21:45:29 PST
PR: 273541.
Attachments
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2013-01-02 22:14:19 PST
Manually committed
http://trac.webkit.org/changeset/138699
. Reviewed by George Staikos, just back up the patch here.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug